fix missing link

--- a/hardware/v0.3/v03.md
+++ b/hardware/v0.3/v03.md
@@ -42,7 +42,7 @@ rechts der 5x5 LED Matrix aufgedruckt ist und die Taster oberhalb der Grove Ansc
 
 - [Software Repository](https://github.com/calliope-mini){:target="_blank"}, enthält die offiziellen Calliope mini Softwareprojekte
 - [OpenRoberta](https://github.com/OpenRoberta) ([online Entwicklungsumgebung](https://lab.open-roberta.org/))
-- [MakeCode](https://github.com/microsoft/pxt-calliope) ([online Entwicklungsumgebung](https://mini.pxt.io))
+- MakeCode ([online Entwicklungsumgebung](https://mini.pxt.io))
 
 #### Standard Firmware
 
