--- a/hardware/v1.0/v10.md
+++ b/hardware/v1.0/v10.md
@@ -46,7 +46,7 @@ der Platine auf der Antenne.
 
 - [Software Repository](https://github.com/calliope-mini){:target="_blank"}, enthält die offiziellen Calliope mini Softwareprojekte.
 - [OpenRoberta](https://github.com/OpenRoberta) ([online Entwicklungsumgebung](https://lab.open-roberta.org/))
-- [MakeCode](https://github.com/microsoft/pxt-calliope) ([online Entwicklungsumgebung](https://pxt.calliope.cc))
+- MakeCode ([online Entwicklungsumgebung](https://pxt.calliope.cc))
 
 #### Standard Firmware
 
