--- a/hardware/v1.0/v10.md
+++ b/hardware/v1.0/v10.md
@@ -57,7 +57,7 @@ läuft und für den Fall aufgespielt wird, wenn sich der Calliope mini nicht meh
 
 ### Pinbelegung
 
-[![Pinbelegung](../assets/v10/img/Calliope_mini_1.0_pinout_fin.jpg)](../assets/v10/img/calliope_mini_1.0_schema_1.jpg)
+[![Pinbelegung](../assets/v10/img/Calliope_mini_1.0_pinout_fin.jpg)](../assets/v10/img/Calliope_mini_1.0_pinout_fin.jpg)
 
 ### Blockschaltbild
 
