update links on images

--- a/hardware/v1.0/v10.md
+++ b/hardware/v1.0/v10.md
@@ -57,11 +57,11 @@ läuft und für den Fall aufgespielt wird, wenn sich der Calliope mini nicht meh
 
 ### Pinbelegung
 
-[![Pinbelegung](../assets/v10/img/Calliope_mini_1.0_pinout_fin.jpg)](../assets/v10/img/Calliope_mini_1.0_pinout_fin.jpg)
+[![Pinbelegung](../assets/v10/img/Calliope_mini_1.0_pinout_fin.jpg)](../assets/v10/img/Calliope_mini_1.0_pinout_fin.jpg){:target="_blank"}
 
 ### Blockschaltbild
 
-![Blockschaltbild Calliope mini v1.0](../assets/v10/img/Calliope-mini-Blockschaltbild-01.png)
+[![Blockschaltbild Calliope mini v1.0](../assets/v10/img/Calliope-mini-Blockschaltbild-01.png)](../assets/v10/img/Calliope-mini-Blockschaltbild-01.png){:target="_blank"}
 
 ### Schaltplan
 
