fix link to schema

--- a/hardware/v0.3/v03.md
+++ b/hardware/v0.3/v03.md
@@ -57,7 +57,7 @@ läuft und für den Fall aufgespielt wird, wenn sich der Calliope mini nicht meh
 [PNG](../assets/v03/img/Calliope mini rev0.3.3_gipfel.png){:target="_blank"},
 (Eagle [SCH](../assets/v03/eagle/Calliope mini rev0.3.3_gipfel.sch), [BRD](../assets/v03/eagle/Calliope mini rev0.3.3_gipfel.brd))
 
-[![Schaltplan Calliope mini v1.0 (Seite 1)](../assets/v03/img/Calliope mini rev0.3.3_gipfel.png)](../assets/img/Calliope mini rev0.3.3_gipfel.png){:target="_blank"}
+[![Schaltplan Calliope mini v1.0 (Seite 1)](../assets/v03/img/Calliope mini rev0.3.3_gipfel.png)](../assets/v03/img/Calliope mini rev0.3.3_gipfel.png){:target="_blank"}
 
 ### Errata / Fehler
 
