--- a/hardware/v1.0/v10.md
+++ b/hardware/v1.0/v10.md
@@ -66,11 +66,13 @@ läuft und für den Fall aufgespielt wird, wenn sich der Calliope mini nicht meh
 ### Schaltplan
 
 [PDF](../assets/v10/img/Calliope mini rev1.0.pdf){:target="_blank"}, 
-PNG ([Seite 1](../assets/v10/img/Calliope mini rev1.0.png){:target="_blank"}, [Seite 2](../assets/v10/img/Calliope mini rev1.0.png){:target="_blank"}),
+PNG ([Seite 1](../assets/v10/img/Calliope mini rev1.0.png){:target="_blank"}, [Seite 2](../assets/v10/img/Calliope mini rev1.0-2.png){:target="_blank"}),
 (Eagle [SCH](../assets/v10/eagle/Calliope mini rev1.0.sch), [BRD](../assets/v10/eagle/Calliope mini rev1.0.brd))
 
 [![Schaltplan Calliope mini v1.0 (Seite 1)](../assets/v10/img/Calliope mini rev1.0.png)](../assets/v10/img/Calliope mini rev1.0.png){:target="_blank"}
 [![Schaltplan Calliope mini v1.0 (Seite 2)](../assets/v10/img/Calliope mini rev1.0-2.png)](../assets/v10/img/Calliope mini rev1.0-2.png){:target="_blank"}
 
+### Errata / Fehler
 
-
+* Die Verbindung von Pin DEC2 und VCC führt zu erhöhtem Stress bei der Nordic nRF51 MCU, da damit der Chip auf 1.8V eingestellt wird. Dieser Fehler in der Schaltung wurde durch eine mechanische Trennung bei allen Board behoben, die ab der Crowdfunding Campagne ausgeliefert wurden. 
+* Die Mikrofonschaltung hat eine sehr geringe Verstärkung. Dieser Fehler wurde durch den Tausch eines Widerstands in der laufenden Produktion behoben.  
