--- a/hardware/v1.0/v10.md
+++ b/hardware/v1.0/v10.md
@@ -74,5 +74,5 @@ PNG ([Seite 1](../assets/v10/img/Calliope mini rev1.0.png){:target="_blank"}, [S
 
 ### Errata / Fehler
 
-* Die Verbindung von Pin DEC2 und VCC führt zu erhöhtem Stress bei der Nordic nRF51 MCU, da damit der Chip auf 1.8V eingestellt wird. Dieser Fehler in der Schaltung wurde durch eine mechanische Trennung bei allen Board behoben, die ab der Crowdfunding Campagne ausgeliefert wurden. 
+* Die Verbindung von Pin DEC2 und VCC führt zu erhöhtem Stress bei der Nordic nRF51 MCU, da damit der Chip auf 1.8V eingestellt wird. Dieser Fehler in der Schaltung wurde durch eine mechanische Trennung bei allen Geräten behoben, die ab der Crowdfunding Campagne ausgeliefert wurden. 
 * Die Mikrofonschaltung hat eine sehr geringe Verstärkung. Dieser Fehler wurde durch den Tausch eines Widerstands in der laufenden Produktion behoben.  
