--- a/hardware/v1.0/v10.md
+++ b/hardware/v1.0/v10.md
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: v1.0
+title: v1.3
 permalink: v10/
 navigation_weight: 2
 ---
 
 ## Allgemeines
 
-Die Revision 1.0 ist eine überarbeitete Version des Calliope mini. Wichtige Änderungen sind der Austausch 
+Die Revision 1.3 ist eine überarbeitete Version des Calliope mini. Wichtige Änderungen sind der Austausch 
 der Taster mit den Grove Anschlüssen, so dass diese besser bedient werden können. Ausserdem wurden auf den
 Grove Anschlüssen zwei Analoge Eingänge verfügbar gemacht. Zusätzlich wurde eine verbesserter Schutz gegen
 elektrostatische Entladung eingebracht. Der Logoaufdruck befindet sich hier auf der linken Seite
@@ -65,14 +65,15 @@ läuft und für den Fall aufgespielt wird, wenn sich der Calliope mini nicht meh
 
 ### Schaltplan
 
-[PDF](../assets/v10/img/Calliope mini rev1.0.pdf){:target="_blank"}, 
-PNG ([Seite 1](../assets/v10/img/Calliope mini rev1.0.png){:target="_blank"}, [Seite 2](../assets/v10/img/Calliope mini rev1.0-2.png){:target="_blank"}),
-(Eagle [SCH](../assets/v10/eagle/Calliope mini rev1.0.sch), [BRD](../assets/v10/eagle/Calliope mini rev1.0.brd))
+[PDF](../assets/v10/img/Calliope mini rev1.3.pdf){:target="_blank"}, 
+PNG ([Seite 1](../assets/v10/img/Calliope mini rev1.3.png){:target="_blank"}, [Seite 2](../assets/v10/img/Calliope mini rev1.3-2.png){:target="_blank"}),
+(Eagle [SCH](../assets/v10/eagle/Calliope mini rev1.3.sch), [BRD](../assets/v10/eagle/Calliope mini rev1.3.brd))
 
-[![Schaltplan Calliope mini v1.0 (Seite 1)](../assets/v10/img/Calliope mini rev1.0.png)](../assets/v10/img/Calliope mini rev1.0.png){:target="_blank"}
-[![Schaltplan Calliope mini v1.0 (Seite 2)](../assets/v10/img/Calliope mini rev1.0-2.png)](../assets/v10/img/Calliope mini rev1.0-2.png){:target="_blank"}
+[![Schaltplan Calliope mini v1.3 (Seite 1)](../assets/v10/img/Calliope mini rev1.3.png)](../assets/v10/img/Calliope mini rev1.3.png){:target="_blank"}
+[![Schaltplan Calliope mini v1.3 (Seite 2)](../assets/v10/img/Calliope mini rev1.3-2.png)](../assets/v10/img/Calliope mini rev1.3-2.png){:target="_blank"}
 
 ### Errata / Fehler
 
-* Die Verbindung von Pin DEC2 und VCC führt zu erhöhtem Stress bei der Nordic nRF51 MCU, da damit der Chip auf 1.8V eingestellt wird. Dieser Fehler in der Schaltung wurde durch eine mechanische Trennung bei allen Geräten behoben, die ab der Crowdfunding Campagne ausgeliefert wurden. 
-* Die Mikrofonschaltung hat eine sehr geringe Verstärkung. Dieser Fehler wurde durch den Tausch eines Widerstands in der laufenden Produktion behoben.  
+* Die Verbindung von Pin DEC2 und VCC führt zu erhöhtem Stress bei der Nordic nRF51 MCU, da damit der Chip auf 1.8V eingestellt wird. Dieser Fehler in der Schaltung wurde durch eine mechanische Trennung bei allen Geräten behoben, die ab der Crowdfunding Campagne ausgeliefert wurden. (**Ab Version > 1.0 behoben**)
+* Die Mikrofonschaltung hat eine sehr geringe Verstärkung. Dieser Fehler wurde durch den Tausch eines Widerstands in der laufenden Produktion behoben. (**Ab Version > 1.0 behoben**) 
+* Die Stromversorgung trennt nicht komplett, wenn Batterie und USB angeschlossen sind. Mit Version 1.3 behoben.
