--- a/hardware/v1.0/v10.md
+++ b/hardware/v1.0/v10.md
@@ -11,7 +11,8 @@ Die Revision 1.3 ist eine überarbeitete Version des Calliope mini. Wichtige Än
 der Taster mit den Grove Anschlüssen, so dass diese besser bedient werden können. Ausserdem wurden auf den
 Grove Anschlüssen zwei Analoge Eingänge verfügbar gemacht. Zusätzlich wurde eine verbesserter Schutz gegen
 elektrostatische Entladung eingebracht. Der Logoaufdruck befindet sich hier auf der linken Seite
-der Platine auf der Antenne.
+der Platine auf der Antenne. Mit der v1.3 wurde eine weitere Masseleitung zum Motorport hinzugefügt und die 
+Stromversorgung so aktualisiert, dass Batterie und USB bei gleichzeitigem Anschluss getrennt sind.
 
 ### Technische Spezifikation  
   
