--- a/hardware/v2.0/v20.md
+++ b/hardware/v2.0/v20.md
@@ -72,4 +72,4 @@ PNG ([Seite 1](../assets/v20/img/Calliope mini rev2.0.png){:target="_blank"}, [S
 
 
 
-![License](../assets/img/calliope_license.png)
+[License](../assets/img/calliope_license.png)
