Updated for changes on 2.1

--- a/hardware/v2.0/v20.md
+++ b/hardware/v2.0/v20.md
@@ -17,7 +17,7 @@ Die größte Neuerung ist hierbei die zusätzliche Bestückung mit einem 128Mb F
     + 32kB RAM
     + 256kB Flash
     + Bluetooth Low Energy 
-    + Flash Speicher 128Mb, 166MHZ ([ISSI IS25LP](http://www.issi.com/WW/pdf/25LP-WP128F.pdf)) 
+* Flash Speicher 128Mb, 166MHZ ([ISSI IS25LP](http://www.issi.com/WW/pdf/25LP-WP128F.pdf)) frei bespielbar und ohne angeschlossenen Computer nutzbar
 * 5x5 LED Matrix Bildschirm  
 * Beschleunigungssensor, Gyroskop, Magnetometer ([Bosch BMX055](https://www.bosch-sensortec.com/bst/products/all_products/bmx055))
 * MEMS Mikrofon
@@ -32,11 +32,10 @@ Die größte Neuerung ist hierbei die zusätzliche Bestückung mit einem 128Mb F
 * 8-11 Ein-/Ausgangsanschlüsse (je nach Softwarekonfiguration)
 * SPI + I2C
 * USB Micro B Anschluss (Programmierung und Stromversorgung)
-* JST Batterieanschluss (3.3V)
+* JST PH 2.0 Batterieanschluss (3.3V)
 * Bananen-/Krokodilklemmenanschluss für 3.3V (Ausgang)
 * 2 [Grove](http://wiki.seeed.cc/Grove_System/) Steckverbinder (I2C + Seriell/Analog)
 * [NXP KL26z](http://www.nxp.com/products/microcontrollers-and-processors/arm-processors/kinetis-cortex-m-mcus/l-series-ultra-low-power-m0-plus/kinetis-kl2x-48-mhz-usb-ultra-low-power-microcontrollers-mcus-based-on-arm-cortex-m0-plus-core:KL2x?lang_cd=en) (USB und Stromversorgung)
-* Flash-Programmspeicher (optional)
 
 ### Software
 
