Updated path to correct image

--- a/hardware/v2.1/v21.md
+++ b/hardware/v2.1/v21.md
@@ -65,7 +65,7 @@ PNG ([Seite 1](../assets/v21/img/Calliope mini rev2.1.png){:target="_blank"}, [S
 (Eagle [SCH](../assets/v21/eagle/Calliope mini rev2.1.sch), [BRD](../assets/v21/eagle/Calliope mini rev2.1.brd))
 
 [![Schaltplan Calliope mini v2.1 (Seite 1)](../assets/v21/img/Calliope mini rev2.1.png)](../assets/v21/img/Calliope mini rev2.1.png){:target="_blank"}
-[![Schaltplan Calliope mini v2.1 (Seite 2)](../assets/v21/img/Calliope mini rev2.1.png)](../assets/v21/img/Calliope mini rev2.1.png){:target="_blank"}
+[![Schaltplan Calliope mini v2.1 (Seite 2)](../assets/v21/img/Calliope mini rev2.1-2.png](../assets/v21/img/Calliope mini rev2.1.png){:target="_blank"}
 
 
 
