--- a/hardware/v2.1/v21.md
+++ b/hardware/v2.1/v21.md
@@ -17,7 +17,7 @@ Die Arbeitsweise und der Funktionsumfang zur Version 2.0 haben sich nicht geänd
     + 32kB RAM
     + 256kB Flash
     + Bluetooth Low Energy 
-* [Raspberry Pi RP2040](https://www.raspberrypi.com/products/rp2040/) Dual-core Arm Cortex-M0+ Prozessor, bis zu 133 MHz
+* [Raspberry Pi RP2040](https://www.raspberrypi.com/products/rp2040/) Dual-core Arm Cortex-M0+ Prozessor, mit bis zu 133MHz
 * Flash Speicher 128Mb, 166MHZ ([ISSI IS25LP](http://www.issi.com/WW/pdf/25LP-WP128F.pdf)), frei bespielbar und ohne angeschlossenen Computer nutzbar
 * 5x5 LED Matrix Bildschirm  
 * Beschleunigungssensor, Gyroskop, Magnetometer ([Bosch BMX055](https://www.bosch-sensortec.com/bst/products/all_products/bmx055))
