--- a/hardware/v3.0/v30.md
+++ b/hardware/v3.0/v30.md
@@ -7,8 +7,7 @@ navigation_weight: 2
 
 ## Allgemeines
 
-Aufgrund der veränderten Verfügbarkeit von Bauteilen, wurden an der Version 2.0 geringe Hardwareveränderungen vorgenommen. Diese überarbeitete Version trägt die Nummer 2.1.
-Die Arbeitsweise und der Funktionsumfang zur Version 2.0 haben sich nicht geändert.
+Der Calliope mini 3 erhält nun schnellere Prozessoren, USB-C, 3 RGB-LED, einen besseren Motortreiber, Jacdac Konnektoren, sowie eine Pinleite.
 
 ### Technische Spezifikation  
   
@@ -30,6 +29,7 @@ Die Arbeitsweise und der Funktionsumfang zur Version 2.0 haben sich nicht geänd
 * 4 ansteckbare Laborstecker-Pins (Bananenstecker-/Krokodilklemmenanschlüsse)
 * SPI + I2C
 * USB-C Anschluss (Programmierung und Stromversorgung)
+* 2x15 Pinleiste (2,54mm Lochraster)
 * JST PH 2.0 Batterieanschluss (3.3V)
 * Bananen-/Krokodilklemmenanschluss für 3.3V (Ausgang)
 * 2 [Grove](http://wiki.seeed.cc/Grove_System/) Steckverbinder (I2C + Seriell/Analog)
