INtegrated Jacdac Text

--- a/hardware/v3.0/v30.md
+++ b/hardware/v3.0/v30.md
@@ -25,6 +25,7 @@ Der Calliope mini 3 erhält nun schnellere Prozessoren, USB-C, 3 RGB-LED, einen 
 * 3 Programmierbare RGB-LED
 * 2 programmierbare Taster
 * Serielle Schnittstelle (USB + konfigurierbare Anschlüsse)
+* 2 Jacdac Konnektoren
 * PWM Ausgabe
 * 4 ansteckbare Laborstecker-Pins (Bananenstecker-/Krokodilklemmenanschlüsse)
 * SPI + I2C
