--- a/hardware/v3.0/v30.md
+++ b/hardware/v3.0/v30.md
@@ -50,7 +50,7 @@ Der Calliope mini 3 erhält nun schnellere Prozessoren, USB-C, 3 RGB-LED, einen 
 
 ### Schaltplan
 
-[PDF](../assets/v30/img/Calliope_mini_3.pdf){:target="_blank"}, 
+[PDF](../assets/v30/img/Calliope_mini_3.pdf){:target="_blank"}
 
 
 [License](../assets/img/calliope_license.png)
